// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformTextLinkCodeMarks should not change text nodes with valid mark combinations 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "href": "http://google.com",
              },
              "type": "link",
            },
            {
              "attrs": {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
          ],
          "text": "world",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
          ],
          "text": " ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
            {
              "type": "strong",
            },
            {
              "attrs": {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
            {
              "type": "strike",
            },
            {
              "attrs": {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "more",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformTextLinkCodeMarks should remove code marks and preserve link marks on text node 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "text with link and code mark",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
